<resources>
    <string name="app_name">DQV-Front</string>
    <string name="txt_usuario">Usuário</string>
    <string name="txt_senha">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="cnt_desc_DQV_LOGO">Logo Departamento de Qualidade de Vida</string>

    <!-- Tela de menu-->
    <string name="txt_noticias">Notícias e Campanhas</string>
    <string name="txt_consultas">Últimas Consultas</string>
    <string name="txt_prescricoes">Receitas e Prescrições</string>
    <string name="title_activity_menu">Menu Principal</string>

    <!-- Alertas -->
    <string name="loginWarning">Por favor, digite um usuário</string>
    <string name="senhaWarning">Por favor, digite a senha</string>
    <string name="userNotFound">Usuário não encontrado, por favor, tente novamente!</string>

    <!-- Receitas -->
    <string name="nomeMedico">Atendente : </string>
    <string name="dtEmissao">Emissão : </string>
    <string name="dtValidade">Validade : </string>
    <string name="posologiaRec">Posologia : </string>
    <string name="descricaoRec">Descrição : </string>
    <string name="nomeMedicamento">Medicamento : </string>
    <string name="prinAtivoRec">P. Ativo : </string>
    <string name="txt_receitas">Receitas</string>


    <!-- Usuário-->
    <string name="txt_meuperfil">Meu perfil</string>
    <string name="btn_mudarsenha">Alterar senha</string>
    <string name="lbl_nomeuser">Nome</string>
    <string name="lbl_cpfuser">CPF</string>
    <string name="lbl_rguser">RG</string>
    <string name="lbl_telefoneuser">Telefone</string>
    <string name="lbl_estciviluser">Estado Civil</string>
    <string name="lbl_datanscuser">Data de Nascimento</string>
    <string name="lbl_sexouser">Sexo</string>
    <string name="lbl_emailuser">E-mail</string>
    <string name="lbl_enduser">Endereço</string>
    <string name="lbl_logradourouser">Logradouro</string>
    <string name="lbl_numeroenduser">Número</string>
    <string name="lbl_cidadeuser">Cidade</string>
    <string name="lbl_ufuser">UF</string>
    <string name="lbl_cepuser">CEP</string>


    <!-- Consulta-->
    <string name="statusConsultaC">Status : Confirmada</string>
    <string name="statusConsultaCan">Status : Cancelada</string>

    <!-- Nova Consulta-->
    <string name="lbl_novaConsulta">Nova Consulta</string>
    <string name="lbl_spinEspecialidade">Selecione a Especialidade: </string>
    <string name="lbl_spinTipoMedico">Selecione o tipo de Médico: </string>
    <string name="lbl_spinMedico">Selecione o Atendente: </string>
    <string name="lbl_dataPick">Selecione a Data: </string>
    <string name="lbl_horaPick">Selecione a Hora: </string>

    <!-- Troca Senha-->
    <string name="lbl_trocasenha">Troca de Senha</string>
    <string name="lbl_senhaAtual">Digite a Senha Atual: </string>
    <string name="lbl_novaSenha">Digite a nova Senha: </string>
    <string name="lbl_novaSenhaConf">Confirme a nova Senha: </string>
    <string name="lbl_confirmarTroca">Confirmar </string>

    <!-- Array Spinner Nova Consulta-->
    <array name="spin_especialidade">
        <item>Médico</item>
        <item>Nutricionista</item>
        <item>Ortodontista</item>
        <item>Psicólogo</item>
        <item>Assistente Social</item>
    </array>

    <!-- Array Spinner Tipo Médico-->
    <array name="spin_tipoMedico">
        <item>Cardiologista</item>
        <item>Ginecologista</item>
        <item>Médico do Trabalho</item>
    </array>

    <string name="noticia"> Novembro Azul é tema de uma campanha de conscientização realizada por diversas entidades com a finalidade de chamar atenção para saúde integral do homem. Mais informações: http://www.sugep.ufrpe.br/node/1017</string>


</resources>
