<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="375dp"
        android:layout_height="216dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.157">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_inpt_usuario"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="136dp"
            app:boxBackgroundColor="#6597A8A4"
            app:boxBackgroundMode="outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toEndOf="@+id/txt_usuario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpt_usuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_inpt_senha"
            android:layout_width="207dp"
            android:layout_height="55dp"
            app:boxBackgroundColor="#6597A8A4"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toEndOf="@+id/txt_senha"
            app:layout_constraintTop_toBottomOf="@+id/lyt_inpt_usuario"
            app:layout_constraintVertical_bias="0.291"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#070000"
            app:passwordToggleTintMode="src_in">

            <EditText
                android:id="@+id/inpt_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_senha"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

        <TextView
            android:id="@+id/txt_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_usuario"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/txt_senha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="419dp"
        android:layout_height="235dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cnt_desc_DQV_LOGO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/dqv_logo"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>