<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/constraintLayout"
        android:visibility="visible"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="bottom|center"
        app:tabIndicatorColor="#63C27C"
        tools:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home_icon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_consultas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/consulta_icon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_receitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/prescription_icon" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/user_icon" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="289dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_noticias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4072FFC2"
                    android:backgroundTintMode="src_over"
                    android:fontFamily="monospace"
                    android:foregroundTint="#60B91C1C"
                    android:foregroundTintMode="add"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/txt_noticias"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    app:cardBackgroundColor="#6F000000" />

                <TextView
                    android:id="@+id/txt_consultas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4072FFC2"
                    android:backgroundTintMode="src_over"
                    android:fontFamily="sans-serif-smallcaps"
                    android:foregroundTint="#60B91C1C"
                    android:foregroundTintMode="add"
                    android:text="@string/txt_consultas"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="247dp"
                    android:background="#6FC0DAB4">

                </androidx.viewpager.widget.ViewPager>

                <TextView
                    android:id="@+id/txt_prescricoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4072FFC2"
                    android:backgroundTintMode="src_over"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/txt_prescricoes"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:background="#6F000000" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
