<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/lyt_noticias_home"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_noticia_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/txt_noticias"
                    app:fontFamily="sans-serif-condensed"
                    style="@style/TextAppearance.AppCompat.Title"/>

                <ImageView
                    android:id="@+id/img_noticia_home"
                    android:layout_width="wrap_content"
                    android:layout_height="210dp"
                    android:layout_below="@+id/txt_noticia_home"
                    android:src="@drawable/nov_azul" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noticia"
                    style="@style/TextAppearance.AppCompat">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/lyt_consulta_home">

                <TextView
                    android:id="@+id/txt_consultas_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_consultas"
                    app:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    style="@style/TextAppearance.AppCompat.Title"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardVConsultas_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#C4ACFACE">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/img_consultTypeIcon_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="40dp"
                            android:background="#0057A88E"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/txt_especialidade_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_consultTypeIcon_home"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="30dp" />


                        <TextView
                            android:id="@+id/txt_nome_medico_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="5dp" />

                        <TextView
                            android:id="@+id/txt_status_consulta_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_nome_medico_home" />

                        <TextView
                            android:id="@+id/txt_data_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_status_consulta_home" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>